PP-01: fix protein box data visibility and design

--- a/src/ProteinLab/PLabDesign/PLabDesign.css
+++ b/src/ProteinLab/PLabDesign/PLabDesign.css
@@ -106,7 +106,8 @@
   flex-flow: row wrap;
 }
 
-.design-edit-btns select {
+.design-edit-btns select,
+.design-edit-btns button {
   width: 50px;
   max-width: 100%;
   padding: 0px 12px 0 12px;
@@ -115,7 +116,6 @@
   text-align: center;
   font-size: 23px;
   text-transform: uppercase;
-
 }
 ::-moz-scrollbar-thumb {
   background-color: #a9a9a9;
@@ -240,6 +240,7 @@
     width: 100%;
   }
 
+  .design-edit-btns select,
   .design-edit-btns button,
   .design-review-btns button {
     padding: 0px 0px;
@@ -270,6 +271,7 @@
 @media (width: 375px) {
 }
 @media (width: 414px) {
+  .design-edit-btns select,
   .design-edit-btns button,
   .design-review-btns button {
     padding: 0px 0px;
@@ -285,6 +287,7 @@
   }
 }
 @media (width: 390px) {
+  .design-edit-btns select,
   .design-edit-btns button,
   .design-review-btns button {
     padding: 0px 0px;
@@ -299,6 +302,7 @@
 @media (width: 360px) {
 }
 @media (width: 412px) {
+  .design-edit-btns select,
   .design-edit-btns button,
   .design-review-btns button {
     padding: 0px 0px;
@@ -314,6 +318,7 @@
   }
 }
 @media (width: 820px) {
+  .design-edit-btns select,
   .design-edit-btns button,
   .design-review-btns button {
     padding: 0px 0px;
@@ -331,6 +336,7 @@
 }
 
 @media (width: 768px) {
+  .design-edit-btns select,
   .design-edit-btns button,
   .design-review-btns button {
     padding: 0px 0px;
@@ -365,6 +371,7 @@
 }
 
 @media (width: 912px) {
+  .design-edit-btns select,
   .design-edit-btns button,
   .design-review-btns button {
     padding: 0px 0px;
@@ -382,6 +389,7 @@
 }
 
 @media (width: 540px) {
+  .design-edit-btns select,
   .design-edit-btns button,
   .design-review-btns button {
     padding: 0px 0px;
@@ -402,6 +410,7 @@
 }
 
 @media (width: 1024px) {
+  .design-edit-btns select,
   .design-edit-btns button,
   .design-review-btns button {
     padding: 0px 0px;
@@ -419,6 +428,7 @@
 }
 
 @media (width: 1280px) {
+  .design-edit-btns select,
   .design-edit-btns button,
   .design-review-btns button {
     padding: 0px 0px;
